# odas-windows

./: .gitignore  CMakeLists-windows.txt  CMakeLists.txt  README.md  quick_test.sh  test_tetrahedral.sh  toolchain-mingw.cmake
config/odaslive/: teensy_tetrahedral.cfg  tetrahedral_4ch-b.cfg  tetrahedral_4ch_windows.cfg
demo/odaslive/: objects.c  parameters.c  parameters.h
docs/: CLEANUP.md  DIRECTORY_STRUCTURE.md  QUICKSTART_WINDOWS.md  README.md
include/odas/general/: interface.h
include/odas/sink/: snk_categories.h  snk_hops.h  snk_pots.h  snk_tracks.h
include/odas/source/: src_hops.h
src/general/: interface.c
src/init/: scanning.c  space.c
src/module/: mod_ssl.c  mod_sss.c  mod_stft.c
src/sink/: snk_categories.c  snk_hops.c  snk_pots.c  snk_tracks.c
src/source/: src_hops.c
